--- a/package.json
+++ b/package.json
@@ -8,15 +8,27 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "ansi-regex": "^4.0.0",
+    "bootstrap": "^4.3.1",
+    "bootstrap-vue": "^2.0.0-rc.11",
+    "jquery": "^3.3.1",
+    "node-sass": "^4.11.0",
+    "popper.js": "^1.14.7",
+    "postcss-loader": "^3.0.0",
+    "punycode": "^2.1.1",
+    "sass-loader": "^7.1.0",
+    "strip-ansi": "^5.0.0",
     "vue": "^2.5.22"
   },
   "devDependencies": {
+    "@babel/polyfill": "^7.0.0-beta.53",
     "@vue/cli-plugin-babel": "^3.4.0",
     "@vue/cli-plugin-eslint": "^3.4.0",
     "@vue/cli-service": "^3.4.0",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0",
+    "vue-cli-plugin-bootstrap-vue": "^0.1.0",
     "vue-template-compiler": "^2.5.21"
   },
   "eslintConfig": {
