--- a/package.json
+++ b/package.json
@@ -8,17 +8,30 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.15",
+    "@fortawesome/free-brands-svg-icons": "^5.7.2",
+    "@fortawesome/free-solid-svg-icons": "^5.7.2",
+    "@fortawesome/vue-fontawesome": "^0.1.5",
+    "animejs": "^3.0.1",
     "ansi-regex": "^4.0.0",
+    "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.0-rc.11",
+    "dat.gui": "^0.7.5",
     "jquery": "^3.3.1",
     "node-sass": "^4.11.0",
+    "oimo": "^1.0.9",
     "popper.js": "^1.14.7",
     "postcss-loader": "^3.0.0",
     "punycode": "^2.1.1",
     "sass-loader": "^7.1.0",
     "strip-ansi": "^5.0.0",
-    "vue": "^2.5.22"
+    "three": "^0.101.1",
+    "vue": "^2.5.22",
+    "vue-animejs": "^2.1.1",
+    "vue-fontawesome": "^0.0.2",
+    "vue-svg-loader": "^0.12.0",
+    "vue-threejs": "^0.2.0-alpha.1"
   },
   "devDependencies": {
     "@babel/polyfill": "^7.0.0-beta.53",
