--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.0-rc.11",
     "dat.gui": "^0.7.5",
+    "dayjs": "^1.8.8",
     "jquery": "^3.3.1",
-    "node-sass": "^4.11.0",
+    "node-sass": "4.12",
     "oimo": "^1.0.9",
     "popper.js": "^1.14.7",
     "postcss-loader": "^3.0.0",
